# ni_seti

./: LICENSE  README.md  pyproject.toml
ni_seti/ansible/plays/dev_tools/: playbook.yml
ni_seti/ansible/roles/virtualenv/tasks/: main.yaml
ni_seti/ansible/roles/virtualenvwrapper/tasks/: main.yaml
