[tool.poetry]
name = "ni-seti"
version = "0.1.0"
description = "A CLI tool that allows you to easily setup your developmenent machine on the go"
authors = ["Latte X <latteindigox@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
